# ARAP_Basic

./: CMakeLists.txt  README.md
include/: Arap.h  Deform.h
src/: Arap.ui  Deform.cpp  arap.cpp  main.cpp
